--- a/config.yml
+++ b/config.yml
@@ -2,3 +2,5 @@ TNTMode:
   world: "world"
   location: "1000.5,30.0,1000.5,0.0,0.0"
   spawn: "785.5,14.0,-340.5,0.0,0.0"
+  bungee: true
+  bungeeHubName: "hub"
