--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,11 @@
 TNTMode:
   world: "world"
   location: "1000.5,30.0,1000.5,0.0,0.0"
-  spawn: "785.5,14.0,-340.5,0.0,0.0"
+  spawn: "793.0,35.0,-330.0,0.0,0.0"
   bungee: true
   bungeeHubName: "hub"
+  locationInfiniteBlock:
+  - "793.5,34.0,-330.5"
+  - "792.5,34.0,-330.5"
+  - "793.5,34.0,-331.5"
+  - "792.5,34.0,-331.5"
